use-case-a-web-application-access/centraldashboard-hr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: centraldashboard
  namespace: kubeflow
spec:
  parentRefs:
  - name: ambient-ingressgateway   # Gateway name, must exist in same or another namespace
    namespace: istio-system        # If gateway is in another namespace, must specify this
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: centraldashboard         # must match a service in kubeflow namespace
      port: 80
