use-case-a-web-application-access/oauth2-proxy-hr.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oauth2-proxy
  namespace: oauth2-proxy
spec:
  parentRefs:
  - name: ambient-ingressgateway   # Gateway name, must exist in same or another namespace
    namespace: istio-system        # If gateway is in another namespace, must specify this
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /oauth2/
    backendRefs:
    - name: oauth2-proxy         # must match a service in oauth2-proxy namespace
      port: 80
