use-case-a-web-application-access/jwa-ap-l4-ingressgateway.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: jwa-l4-ingressgateway
  namespace: kubeflow
spec:
  action: ALLOW
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/istio-system/sa/ambient-ingressgateway-istio
  selector:
    matchLabels:
      app: jupyter-web-app
